# AIEmpire-Core

./: ## Chat Customization Diagnostics.md  .env.example  .gitignore  100_AGENT_ARCHITECTURE.md  ACADEMY_BLUEPRINT.md  AGENT_ARMY_START.md  AGENT_SWARM_GUIDE.md  AIEmpire-Core-2.0.md5  AI_EMPIRE_BIG_PICTURE.html  AI_EMPIRE_BLUEPRINT_TOP10.docx  AI_EMPIRE_DASHBOARD.html  AI_EMPIRE_GESAMTSTRUKTUR.docx  AI_EMPIRE_MINI_BLUEPRINT.md  ANTIGRAVITY_FEATURES.md  ATOMIC_REVENUE_MACHINE.py  ATOMIC_REVENUE_SUMMARY.json  AUTONOMOUS_EMPIRE_GUIDE.md  AUTOPILOT.md  AUTOPILOT.py  AUTOPILOT_QUICKSTART.md  BUDGET_LOG.md  CHAT_EXPORT_QUICKREF.md  CLAUDE.md  CLAUDE_HANDOFF.md  CLAUDE_HANDSHAKE.md  CLAUDE_MEGA_PROMPT.md  COMPLETE_STRUCTURE.md  CONTRIBUTING.md  DATA_ROOM_INDEX.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_MANIFEST.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY_2026_02_11.md  DOCUMENTATION_INDEX.md  Dockerfile.skills  EMPIRE_AUTOMATION_MASTER_PLAN.md  EMPIRE_BLUEPRINT.md  EMPIRE_INTEGRATION_COMPLETE.md  EMPIRE_LOG.md  (+188 more)
.claude/: settings.local.json
.github/: CODEOWNERS  LABELS.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  labels.yml  merge-rules.md
00_SYSTEM/: MONSTER_CONSTRUCT_MASTER.json  MONSTER_CONSTRUCT_MASTER.md  channel_concept_youtube_shorts.md  project_chronik.md
EXPORT/: README.md
agent-academy/: README.md
agent-dashboard/: Info.plist  build.sh
agents/: README.md
ai-vault/: AGENT_LEGION_50_DOCTRINE.md  empire.env.example
ai_empire/: __init__.py  agent_manager.py  empire_nucleus.py  guarded_tools.py  heartbeat_scheduler.py  memory_core.py  ollama_engine.py  skills_library.py
ant_protocol/: __init__.py  api.py  colony.py  config.py  protocol.py  queen.py  worker.py
antigravity/: ANTIGRAVITY_DASHBOARD.md  CLAUDE_OFFLINE_SETUP.md  CLAUDE_OLLAMA_CONFIG.md  ISSUES.json  ISSUES_KANBAN.md  LAUNCH_MANUAL.md  MASTER_COMMANDS.md  QUICK_START.md  README.md  STRUCTURE_MAP.html  STRUCTURE_MAP.json  SYSTEM_READY.md  __init__.py  agent_orchestrator.py  agent_runner.py  agent_swarm.py  artifact_manager.py  cloud_backend.py  cluster_issues.py  codebase_search.py  collect_reports.py  com.aiempire.guardian.plist  config.py  context_continuity.py  conversation_logger.py  cross_verify.py  empire_bridge.py  feed_scanner.py  free_model_router.py  gemini_bridge.py  gemini_client.py  godmode_router.py  implementation_plan.md  knowledge_items.py  knowledge_store.py  merge_gate.py  merge_queue.py  multi_replace.py  notify_system.py  offline_claude.py  (+25 more)
apps/: README.md
articles/: ARTICLE_1_The_End_of_Manual_Labor:_Agents_Explained.md  ARTICLE_1_Why_N8N_+_Python_is_the_Ultimate_Stack.md
atomic-reactor/: docker-compose.yaml  night_run_1000.py  night_tasks_config.py  run_tasks.py  test_night_run.py
atomic_reactor/: docker-compose.yaml  (+1 more)
(+1912 files in other folders)
