[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ai-empire"
version = "0.1.0"
description = "AI Empire Core - Autonomous AI Agent Orchestration System"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Maurice Pfeifer"}
]

dependencies = [
    "aiohttp>=3.9.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.31.0",
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
include = ["ai_empire*", "workflow_system*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
